fix AssignButton popover to word-wrap text at bottom-#3715

--- a/app/assets/stylesheets/modules/_popover.styl
+++ b/app/assets/stylesheets/modules/_popover.styl
@@ -59,13 +59,13 @@
     td
       height auto
       padding 20px
-      white-space nowrap
       input
         margin-right 10px
         margin-top 0
         width inherit
       > *
         vertical-align middle
+      word-wrap break-word
 
   .button + &
     margin-left 10px
